--- a/doc/uobject/quick-start.tex
+++ b/doc/uobject/quick-start.tex
@@ -147,9 +147,10 @@ on Mac OS X, and \file{ufactory.dll} on Windows.
 To abstract away from these differences, we will simply use the base
 name, \file{ufactory} with the \urbi tool chain.
 
-There are several options to compile our sample factory as a UObject,
-for instance you can use directly your regular compiler tool chain.
-You may also use the \file{umake-*} family of programs ().
+There are several options to compile our factory as a UObject.  You
+can use directly your regular compiler tool chain.  You may also use
+\command{umake-shared} from the \file{umake-*} family of programs
+(\autoref{sec:tools:umake:wrappers}).
 
 
 \subsection{Asynchronicity}
