--- a/doc/urbi-report.sty
+++ b/doc/urbi-report.sty
@@ -156,6 +156,7 @@
 \lstnewenvironment{shell}[1][]
   {\lstset{language=Shell,
       basicstyle=\ttfamily\footnotesize,
+      moredelim=[is][\ttfamily\itshape]{\\var\{}{\}},
       #1}}
   {}
 
