--- a/doc/specs/stdlib.tex
+++ b/doc/specs/stdlib.tex
@@ -15,6 +15,8 @@
 \input{specs/dictionary}
 \input{specs/event}
 \input{specs/float}
+\input{specs/formater}
+\input{specs/formatinfo}
 \input{specs/global}
 \input{specs/group}
 \input{specs/lazy}
