doc: sort files.
Each part in its directory.

	* doc/faq.tex, doc/k1-to-k2.tex: Move as...
	* doc/guide/faq.tex, doc/guide/k1-to-k2.tex: these.
	* doc/installation.tex: Rename as...
	* doc/installation/installation.tex: this.
	* doc/urbi-sdk.tex: Adjust.

--- a/doc/urbi-sdk.tex
+++ b/doc/urbi-sdk.tex
@@ -36,12 +36,12 @@
 
 \part{Installation}
 \label{part:install}
-\input{installation}
+\input{installation/installation}
 
 \part{Guidelines and Cook Books}
 \label{part:guide}
-\input{faq}
-\input{k1-to-k2}
+\input{guide/faq}
+\input{guide/k1-to-k2}
 
 \part{Urbi SDK Specifications}
 \label{part:specs}
